# sarah

./: .gitignore  CMakeLists.txt  LICENSE  README.md  diabelka.cc  step-0.cc
include/sarah/: cat_problem.h  cell_tools.h  error_estimator.h  matrix_creator.h
source/: CMakeLists.txt  cat_problem.cc  cell_tools.cc  error_estimator.cc  error_estimator.inst  matrix_creator.cc  matrix_creator.inst
